# notSTL

./: .gitignore  AUTHORS.md  CMakeLists.txt  CONTRIBUTING.md  FAQ.md  LICENSE.md  README.md  VERSION.md  create.sh
cmake/: LinCompilerFlags.txt  LinMakeLists.txt  WinCompilerFlags.txt  WinMakeLists.txt
libs/: CMakeLists.txt
libs/header-only/: CMakeLists.txt  HeaderOnly.h
libs/nstl/: CMakeLists.txt  cstddef  type_traits
libs/nstl-configs/: CMakeLists.txt  Compiler.h  LibConfig.h  Platform.h
libs/sample-lib/: CMakeLists.txt  Header.h  Implementation.cpp
src/: CMakeLists.txt  main.cpp
src/sample-class/: CMakeLists.txt  SampleClass.cpp  SampleClass.h
